fixed layout bug due to browser scrollbar

--- a/main.css
+++ b/main.css
@@ -1,7 +1,5 @@
 body {
 	font-family: "Proxima Nova", Helvetica, sans-serif;
-	margin: 0px;
-	padding: 0px;
 	background-color: #F5F5F7;
 	font-size: 14px;
     color: #000000;
